<resources>
    <string name="app_name">Kanon_Health</string>
    <string name="my_doctors">My Doctor\'s</string>
    <string name="chats">Chats</string>
    <string name="search">Search</string>
    <string name="my_decument">My documents</string>
    <string name="docor_list">Doctor List</string>
    <string name="setting">Settings</string>
    <string name="sign_in">Sign in</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_profile">My Profile</string>
    <string name="edit">Edit</string>
    <string name="personal_info">Important Information</string>
    <string name="birthday">Birthday :</string>
    <string name="date">date :</string>
    <string name="category">category :</string>
    <string name="doctor">Doctor :</string>
    <string name="diagnose">Diagnose :</string>
    <string name="report">Report :</string>
    <string name="comment">Comment :</string>
    <string name="streat">Streart Name :</string>
    <string name="house_number">House Number :</string>
    <string name="zip_code">Zip Code :</string>
    <string name="provinz">Provinz</string>
    <string name="voluntary_info">Voluntary Information</string>
    <string name="question">Question :</string>
    <string name="answer">Please Fill Data</string>
    <string name="back">Back</string>
    <string name="change_passcode">Change Passcode</string>
    <string name="change_phone">Change Phone Number</string>
    <string name="sound_notification"><![CDATA[Sound & Notification]]></string>
    <string name="terms_conditions">Terms and Conditions</string>
    <string name="faq">FAQ</string>
    <string name="contact_support">Sorry Missing Data , Please Contact with Support</string>
    <string name="version">Version</string>
    <string name="help">Hilfe</string>
    <string name="all_doctors">All Doctors</string>
    <string name="only_my_self">Only Myself</string>
    <string name="contact">Contact</string>
    <string name="add_to">Add to My Doctor\'s</string>
    <string name="remove_from">Remove as my Doctor</string>
    <string name="error_connection">Please Check Your Internet Connection</string>
    <string name="serror_connection">Please Check Your Internet Connection</string>
    <string name="change_privacy_msg">Möchten Sie die Privatsphäre ändern?</string>
    <string name="end_session">Close Current Request</string>
    <string name="start_session">Start New Conversation</string>
    <string name="please_rate">Please Rate</string>
    <string name="reviews">Reviews</string>
    <string name="write_review_hint">Write a review ...</string>
    <string name="temp"> Temp Value to Test</string>
    <string name="invalid_input"> Your input is invalid</string>
    <string name="thanksforcomment">Thanks for Comment</string>
    <string name="youareoffline">You are now : Offline</string>
    <string name="youareonline">You are now : Online</string>
    <string name="go_online">Go Online</string>
    <string name="go_offline">Go Offline</string>
    <string name="location">Location :</string>
    <string name="city">City :</string>
    <string name="province">Province :</string>
    <string name="country">Country :</string>
    <string name="hot_line">Hotline</string>
    <string name="fax">Fax</string>
    <string name="website">Wensite</string>
    <string name="service">Service</string>
    <string name="profile">Profile</string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="start">Got It</string>
    <string name="sign_up">Verifiziere deine Nummer</string>
    <string name="signup">SignUp</string>
    <string name="enter_verification_code">Enter your verification number</string>
    <string name="verify_code">Verify</string>
    <string name="resend">Resend</string>
    <string name="resend_message">If you did not receive an SMS, Tab the Resend button below</string>
    <string name="verifcation">Verification</string>
    <string name="save">Save</string>
    <string name="request">Request</string>
    <string name="error_message">Some thing was wrong please try again</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="warning">Warning</string>
    <string name="some_wrong">Some thing was wrong when loading application please try agin</string>
    <string name="login">Login</string>
    <string name="show_profile">Show Profile</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="pay">Pay</string>
    <string name="select_profile_img">Select Profile Image</string>
    <string name="question_11_12_13">Was soll untersucht werden?</string>
    <string name="rp_quest">Name des Medikaments?</string>
    <string name="uberweisung_ques1">An welchem Fachartzt?</string>
    <string name="uberweisung_ques2">Aus welchem Anlass?</string>
    <string name="krankenhaus_ques1">An welches Krankenhaus?</string>
    <string name="krankenhaus_ques2">Aus welchem Anlass?</string>
    <string name="au_ques1">An welchen Zeitraum?</string>
    <string name="au_ques2">Aus welchem Anlass?</string>
    <string name="attest_ques1">Was soll attestiert werden?</string>
    <string name="attest_ques2">Für welchen Zeitraum?</string>
    <string name="worüber">Worüber möchten Sie eine Beratung bekommen?</string>
    <string name="finish">Danke, Sie Sind jetzt eingeloggt. Das Praxispersonal hat Ihre Anfrage erhalten. Sie werden in 8 Stunden automatisch ausgeloggt. Bitte warten Sie bis Sie aufgerufen werden.</string>
    <string name="main_question">Bitte wählen Sie den Grund \n
        Ihres Besuchs</string>
    <string name="beratung" translatable="false">Beratung</string>
    <string name="untershchung" translatable="false">Untersuchung / Behandlung</string>
    <string name="medizinische_dokumente">Medizinische Dokumente</string>
    <string name="fertig">Fertig</string>
    <string name="Answer">Ich möchte eine Behandlung für....</string>
    <string name="ich">Ich habe einen Termin</string>
    <string name="at_which_time">Zu welcher Uhrzeit?</string>
    <string name="beratung_frage">Worüber möchten Sie beraten werden?</string>
    <string name="action_submit">Abschicken</string>
    <string name="körperliche_untersuchung">Körperliche Untersuchung</string>
    <string name="laboruntersuchung">Laboruntersuchung (Blut, Urin etc.)</string>
    <string name="technische_untersuchung">Technische Untersuchung (EKG etc.)</string>
    <string name="sonstiges">Sonstiges</string>
    <string name="other">other</string>
    <string name="rp">Rezept</string>
    <string name="rp_question">Name des Medikaments?</string>
    <string name="uberweisung">Überweisung</string>
    <string name="uberweisung_first_question">An welchen Fachartzt?</string>
    <string name="uberweisung_second_question">Aus welchem Anlass?</string>
    <string name="krankenhaus_einweisung">Krankenhauseinweisung</string>
    <string name="krankenhaus_first_question">An welches Krankenhaus?</string>
    <string name="krankenhaus_second_question">Aus welchem Anlass?</string>
    <string name="au">AU (Krankschreibung)</string>
    <string name="au_first_question">Für welchen Zeitraum?</string>
    <string name="au_second_question">Aus welchem Grund?</string>
    <string name="attest">Attest</string>
    <string name="attest_first_question">Was soll attestiert werden?</string>
    <string name="attest_second_question">Für welchen Zeitraum?</string>
    <string name="termin_frage">Zur welcher Uhrziet?</string>
    <string name="dialog_danke_message">Danke, Sie Sind jetzt eingeloggt</string>
    <string name="herz_abhorchen">Herz abhorchen</string>
    <string name="firstLevel">firstLevel</string>
    <string name="secondLevel">secondLevel</string>
    <string name="question_1">question_1</string>
    <string name="question_11">question_11</string>
    <string name="question_12">question_12</string>
    <string name="question_13">question_13</string>
    <string name="question_14">question_14</string>
    <string name="question_15">question_15</string>
    <string name="question_2">question_2</string>
    <string name="question_21">question_21</string>
    <string name="question_22">question_22</string>
    <string name="question_23">question_23</string>
    <string name="question_24">question_24</string>
    <string name="question_25">question_25</string>
    <string name="question_212">question_212</string>
    <string name="question_221">question_221</string>
    <string name="question_222">question_222</string>
    <string name="question_231">question_23</string>
    <string name="question_232">question_23</string>
    <string name="question_241">question_241</string>
    <string name="question_242">question_242</string>
    <string name="question_251">question_251</string>
    <string name="question_252">question_252</string>
    <string name="question_3">question_3</string>
    <string name="question_31">question_31</string>
    <string name="question_4">question_4</string>
    <string name="question_41">question_41</string>
    <string name="first_level">firstLevel</string>
    <string name="waiting_text">Wird Geladen</string>
    <string name="qr_text">Liebe Patienten, um Ihnen schnell und einfach helfen zu können, haben wir für Sie eine eigene Praxis APP entwickelt.
\n \n
Mit dem  QR Code können Sie sich in die Praxis einwählen.
\n \n
Bitte teilen Sie uns Ihr Anliegen durch das wählen der Optionen mit und stellen sie Ihre mitgebrachten Dokumente in Form eines Fotos uns zur Verfügung.</string>
    <string name="profile_detail_header">Bitte wählen Sie ein Profilbild</string>
    <string name="first_name">Vorname</string>
    <string name="last_name">Nachname</string>
    <string name="important_info">Wichtige Informationen :</string>
    <string name="wrong_code">Der eingegebene Code ist leider ungültig</string>
    <string-array name="countries_code">
        <item>+965</item>
        <item>+987</item>
        <item>+762</item>

    </string-array>
    <string-array name="countries_name">
        <item>Egypt</item>
        <item>Germany</item>
        <item>England</item>
    </string-array>
    <string name="title_activity_doctor_profile">DoctorProfile</string>
    <string name="under_verificauion_header">Die Praxis APP sendet eine SMS, um deine Telefonnummer zu verifizieren. Gib deinen Landescode und deine Telefonnumer ein:</string>
    <string name="select_your_country">Wähle dein Land</string>
    <string name="Invalid_country">Ungültiges Landy</string>
    <string name="take_new_image">Take New Image</string>
    <string name="select_from_gallery">Select From Gallery</string>
    <string name="delete_image">Delete Image</string>
    <string name="title_activity_maps">Map</string>
    <string name="payment">Payment</string>
    <string name="payment_details">Payment details</string>
    <string name="open_session_again">Start New Request</string>
    <string name="close_conversation">Are you sure you want to close the conversation</string>
    <string name="session_ended">Session Closed</string>
    <string name="rate_conversation">Please rate your conversation</string>
    <string name="main_profile">Main Profile</string>
    <string name="error_create_database">error while create database</string>
    <string name="error_update_database">error while update database</string>
    <string name="erre_database_insert">error while insert in database</string>
    <string name="error_getting_database">error while getting data from database</string>
    <string name="error_loading_data">error while loading data</string>
    <string name="error_saving_data">error while saving data</string>
    <string name="error_playing">error while plying video</string>
    <string name="contact_by_chat">Contact By Chat</string>
    <string name="status_online">Status Online</string>
    <string name="status_offline">Status Offline</string>
    <string name="title">Title</string>
</resources>