<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">

        <ImageButton
            android:layout_width="@dimen/size_35dp"
            android:layout_height="@dimen/size_35dp"
            android:background="@null"
            android:scaleType="fitXY"
            android:src="@drawable/back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:lines="1"
            android:text="@string/back"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/size_15sp"
            android:textStyle="bold" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:lines="1"
            android:text="@string/docor_list"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textStyle="bold" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginRight="@dimen/size_25dp"
            android:lines="1"
            android:text="@string/all_doctors"
            android:textColor="@color/colorAccent"
            android:textStyle="bold" />
    </android.support.v7.widget.Toolbar>


    <com.google.android.gms.maps.MapView
        android:id="@+id/map"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>
