<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white">


    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="Docotr Name"
            android:textColor="@color/black"
            android:textStyle="bold" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginRight="@dimen/size_25dp"
            android:text="@string/contact"
            android:textColor="@color/colorAccent"
            android:textStyle="bold" />
    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/size_5dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.1"
            android:gravity="center"
            android:orientation="vertical">


            <ImageView
                android:layout_width="@dimen/size_70dp"
                android:layout_height="@dimen/size_70dp"
                android:src="@drawable/profile_place_holder" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="left|center"
            android:orientation="vertical"
            android:paddingLeft="@dimen/size_5dp">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Eslam"
                android:textSize="@dimen/size_17sp"
                android:textStyle="bold" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="A.Gwad"
                android:textSize="@dimen/size_17sp"
                android:textStyle="bold" />
        </LinearLayout>


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="@dimen/size_10dp"
            android:scaleType="fitXY"
            android:src="@drawable/qr" />


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:padding="@dimen/size_5dp"
            android:text="+02 01066253101"
            android:textColor="@color/colorAccent"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:paddingRight="@dimen/size_5dp"
            android:text="xxxxxxxxxxx"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/size_17sp"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/size_5dp"
        android:text="@string/add_to"
        android:textColor="@color/black" />


    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/line" />


    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/size_5dp"
        android:paddingRight="@dimen/size_5dp"
        android:paddingTop="@dimen/size_5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="7"
            android:text="@string/streat"
            android:textStyle="bold" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/size_5dp"
        android:paddingRight="@dimen/size_5dp"
        android:paddingTop="@dimen/size_5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="7"
            android:text="@string/house_number"
            android:textStyle="bold" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/size_5dp"
        android:paddingRight="@dimen/size_5dp"
        android:paddingTop="@dimen/size_5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="7"
            android:text="@string/zip_code"
            android:textStyle="bold" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/size_5dp"
        android:paddingRight="@dimen/size_5dp"
        android:paddingTop="@dimen/size_5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="7"
            android:text="@string/provinz"
            android:textStyle="bold" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/size_5dp"
        android:paddingRight="@dimen/size_5dp"
        android:paddingTop="@dimen/size_5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="7"
            android:text="@string/country"
            android:textStyle="bold" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/size_5dp"
        android:paddingLeft="@dimen/size_5dp"
        android:paddingRight="@dimen/size_5dp"
        android:paddingTop="@dimen/size_5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="7"
            android:text="@string/hot_line"
            android:textStyle="bold" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/size_5dp"
        android:paddingLeft="@dimen/size_5dp"
        android:paddingRight="@dimen/size_5dp"
        android:paddingTop="@dimen/size_5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="7"
            android:text="@string/fax"
            android:textStyle="bold" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/size_5dp"
        android:paddingLeft="@dimen/size_5dp"
        android:paddingRight="@dimen/size_5dp"
        android:paddingTop="@dimen/size_5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="7"
            android:text="@string/website"
            android:textStyle="bold" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="" />

    </TableRow>


    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/size_5dp"
        android:paddingLeft="@dimen/size_5dp"
        android:paddingRight="@dimen/size_5dp"
        android:paddingTop="@dimen/size_5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="7"
            android:text="@string/service"
            android:textStyle="bold" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="" />

    </TableRow>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!--<fragment-->
            <!--android:id="@+id/map"-->
            <!--android:name="com.google.android.gms.maps.MapFragment"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="match_parent" />-->


    </RelativeLayout>


</LinearLayout>
