<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main_choose"
    android:layout_marginBottom="@dimen/activity_vertical_margin"
    android:layout_marginLeft="@dimen/activity_horizontal_margin"
    android:layout_marginRight="@dimen/activity_horizontal_margin"
    android:layout_marginTop="@dimen/activity_vertical_margin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:baselineAligned="false"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center">
        <TextView
            android:text="@string/main_question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/text_welcome"
            android:textStyle="normal|bold|italic"
            android:textSize="24dp"
            android:textAlignment="center"
            android:textColor="@android:color/background_dark"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center">

        <Button
            android:id="@+id/button_medizinische"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/round"
            android:drawableLeft="@drawable/document"
            android:text="@string/medizinische_dokumente"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center">
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/button_untersuchung"
            android:text="@string/untershchung"
            android:textStyle="bold"
            android:drawableLeft="@drawable/consultation"
            android:textAllCaps="false"
            android:background="@drawable/round"
            android:textColor="@android:color/white"
            android:onClick="addMyQuestionsAnswer"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center">
        <Button
            android:text="@string/beratung"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/button_beratung"
            android:drawableLeft="@drawable/checkup"
            android:textAllCaps="false"
            android:textStyle="bold"

            android:background="@drawable/round"
            android:textColor="@android:color/white" />
    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center">
        <Button
            android:text="@string/ich"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/button_Ich"
            android:textAllCaps="false"
            android:drawableLeft="@drawable/appointment"
            android:textStyle="bold"
            android:background="@drawable/round"
            android:textColor="@android:color/white" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center">

        <android.support.design.widget.FloatingActionButton
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:text="Fertig"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/button_submit"
            android:src="@drawable/ic_check_black_24dp"
            app:backgroundTint="@color/blue"
            />
    </LinearLayout>
</LinearLayout>
